--- a/WhoWroteIt/app/src/main/res/layout/activity_main.xml
+++ b/WhoWroteIt/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_margin="16dp"
     tools:context=".MainActivity">
 
     <TextView
@@ -12,8 +13,9 @@
         android:layout_height="wrap_content"
         android:text="@string/instructions"
         android:textAppearance="@style/TextAppearance.AppCompat.Title"
+        android:textColor="@android:color/holo_blue_dark"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/bookInput"
@@ -31,10 +33,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
+        android:background="@android:color/holo_blue_dark"
         android:onClick="searchBooks"
         android:text="@string/button_text"
+        android:textColor="@android:color/background_light"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/bookInput"/>
+        app:layout_constraintTop_toBottomOf="@+id/bookInput" />
 
     <TextView
         android:id="@+id/titleText"
