--- a/ServiceLabs/app/src/main/res/layout/activity_main.xml
+++ b/ServiceLabs/app/src/main/res/layout/activity_main.xml
@@ -7,10 +7,12 @@
     tools:context=".MainActivity">
 
     <Button
-        android:id="@+id/btn1"
+        android:id="@+id/btn_service"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@color/colorPrimaryDark"
+        android:paddingLeft="8dp"
+        android:paddingRight="8dp"
         android:text="@string/start_service"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -18,15 +20,17 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/btn2"
+        android:id="@+id/btn_intent_service"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@android:color/holo_orange_light"
+        android:onClick="intentServiceManagement"
+        android:paddingLeft="8dp"
+        android:paddingRight="8dp"
         android:text="@string/start_an_intent_service"
-        android:onClick="startIntentService"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="@id/btn1" />
+        app:layout_constraintTop_toTopOf="@id/btn_service" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
