--- a/ServiceLabs/app/src/main/res/layout/activity_main.xml
+++ b/ServiceLabs/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#86FFEB3B"
     tools:context=".MainActivity">
 
     <Button
@@ -23,7 +24,7 @@
         android:id="@+id/btn_intent_service"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@android:color/holo_orange_light"
+        android:background="@android:color/holo_purple"
         android:onClick="intentServiceManagement"
         android:paddingLeft="8dp"
         android:paddingRight="8dp"
