--- a/SQLiteLabs/app/src/main/res/layout/activity_main.xml
+++ b/SQLiteLabs/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,51 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
+    <LinearLayout
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <TextView
+        android:id="@+id/name"
+        android:layout_width="200dp"
+        android:layout_height="30dp"
+        android:textSize="16sp"
+        android:text="@string/name"/>
+        <EditText
+            android:id="@+id/name_edittext"
+            android:layout_width="200dp"
+            android:layout_height="30dp"
+            android:textSize="16sp"/>
+
+        <TextView
+            android:id="@+id/location"
+            android:layout_width="200dp"
+            android:layout_height="30dp"
+            android:textSize="16sp"
+            android:text="@string/location"/>
+        <EditText
+            android:id="@+id/location_edittext"
+            android:layout_width="200dp"
+            android:layout_height="30dp"
+            android:textSize="16sp"/>
+
+        <TextView
+            android:id="@+id/designation"
+            android:layout_width="200dp"
+            android:layout_height="30dp"
+            android:textSize="16sp"
+            android:text="@string/designation"/>
+        <EditText
+            android:id="@+id/designation_edittext"
+            android:layout_width="200dp"
+            android:layout_height="30dp"
+            android:textSize="16sp"/>
+
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
