--- a/SQLiteLabs/app/src/main/res/layout/activity_main.xml
+++ b/SQLiteLabs/app/src/main/res/layout/activity_main.xml
@@ -51,6 +51,15 @@
             android:layout_height="30dp"
             android:textSize="16sp"/>
 
+        <Button
+            android:id="@+id/btnSave"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@color/colorPrimary"
+            android:textColor="@android:color/background_light"
+            android:text="@string/save"
+            android:layout_gravity="center"/>
+
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
