--- a/SQLiteLabs/app/src/main/res/layout/activity_details.xml
+++ b/SQLiteLabs/app/src/main/res/layout/activity_details.xml
@@ -3,19 +3,25 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
+
     <ListView
         android:id="@+id/user_list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="9.2"
         android:dividerHeight="1dp">
+
     </ListView>
 
     <Button
         android:id="@+id/btnBack"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_height="0dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="10dp"
+        android:layout_weight="0.8"
+        android:background="@android:color/background_dark"
         android:text="@string/back"
-        android:gravity="center_horizontal"/>
+        android:textColor="@android:color/background_light" />
 
 </LinearLayout>
