Add SearchUserActivity and rename activity_user_details.xml en activity_search_user.xml

--- a/SQLiteLabs/app/src/main/res/layout/activity_search_user.xml
+++ b/SQLiteLabs/app/src/main/res/layout/activity_search_user.xml
@@ -22,9 +22,27 @@
             android:id="@+id/user_id_edittext"
             android:layout_margin="10dp"
             android:textSize="14sp"
+            android:inputType="number"
             android:hint="@string/user_id"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
+
+        <Button
+            android:id="@+id/searchBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:background="@color/colorPrimary"
+            android:text="@string/search"
+            android:textColor="@android:color/background_light"
+            />
+
+        <TextView
+            android:id="@+id/user_found"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/default_user"
+            android:visibility="invisible"/>
     </LinearLayout>
 
 
