--- a/SQLiteLabs/app/src/main/res/layout/activity_main.xml
+++ b/SQLiteLabs/app/src/main/res/layout/activity_main.xml
@@ -51,14 +51,30 @@
             android:layout_height="40dp"
             android:textSize="16sp"/>
 
-        <Button
-            android:id="@+id/btnSave"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@color/colorPrimary"
-            android:textColor="@android:color/background_light"
-            android:text="@string/save"
-            android:layout_gravity="center"/>
+            android:layout_gravity="center"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/btnSave"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@android:color/holo_orange_dark"
+                android:text="@string/save"
+                android:textColor="@android:color/background_light" />
+
+            <Button
+                android:id="@+id/btnSearch"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@color/colorPrimary"
+                android:text="@string/search_by_id"
+                android:textColor="@android:color/background_light" />
+
+        </LinearLayout>
+
 
     </LinearLayout>
 
